added navigation hide on scroll effect

--- a/_variables.scss
+++ b/_variables.scss
@@ -6,3 +6,10 @@ $quaternary-background-color: #1a1a2e;
 $header-height: 4rem;
 
 $border-radius: 20px;
+
+$xs-max-width: 320px;
+$sm-max-width: 480px;
+$md-max-width: 768px;
+$lg-max-width: 1024px;
+$xl-max-width: 1200px;
+$xxl-max-width: 1400px;
