--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 25%;
+}
+#skills h3 {
+  margin-bottom: 5rem;
 }
 #skills ul {
   display: flex;
@@ -91,6 +93,9 @@
   margin: 20px;
   list-style: none;
   text-align: center;
+}
+#skills ul li .devicon {
+  font-size: 10rem;
 }
 
 @media only screen and (max-width: 400px) {
