added wallpaper to main section, added text to the README file

--- a/styles.css
+++ b/styles.css
@@ -311,6 +311,9 @@ body .container #home {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  background-image: url(./../assets/wallpaper.png);
+  background-size: contain;
+  background-attachment: fixed;
 }
 body footer {
   background-color: #e94560;
