_main.scss url updated

--- a/styles.css
+++ b/styles.css
@@ -311,7 +311,7 @@ body .container #home {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-image: url(./../assets/wallpaper.png);
+  background-image: url("./../assets/wallpaper.png");
   background-size: contain;
   background-attachment: fixed;
 }
