--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -30,7 +30,7 @@ body {
         }
         #home {
             @include mixins.displayFlex(row, center, center);
-            background-image: url(./../assets/wallpaper.png);
+            background-image: url("./../assets/wallpaper.png");
             background-size: contain;
             background-attachment: fixed;
         }
